force-app/main/default/src/objects/PJN_Event__c/fields/MVN_SubStatus_Description__c.field-meta.xml
<CustomField>
    <fullName>MVN_SubStatus_Description__c</fullName>
    <description>SubStatus description from Orsini</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SubStatus Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>