force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Transaction_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Transaction_Type_Formula__c</fullName>
    <formula>CASE(MVN_Access_Type__c,
 &apos;Patient Assistance Program&apos;,&apos;PAP&apos;, 
 &apos;Clinical Trial Transition Program&apos;,&apos;CTTP&apos;,
 &apos;Interim Access Program&apos;,&apos;IAP&apos;,
&apos;COM&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Type Formula</label>
    <type>Text</type>
</CustomField>