force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Date__c</fullName>
    <description>Date of confirmed treatment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Treatment Date</label>
    <type>Date</type>
</CustomField>