force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Details__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Details__c</fullName>
    <description>Details for the confirmed treatment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Treatment Details</label>
    <type>TextArea</type>
</CustomField>