force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Site__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events (Treatment Site)</relationshipLabel>
    <relationshipName>Events_Trearment_Site</relationshipName>
    <type>Lookup</type>
</CustomField>