force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Site_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site_Address_Line_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treatment Site Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>