force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Site_Address_Line_2_Formul__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site_Address_Line_2_Formul__c</fullName>
    <description>Returns Treatment Site Address Line 2 if Treatment Site Type is NOT Home</description>
    <formula>IF (
MVN_Treatment_Site_Type_Formula__c == &apos;Home&apos;,
null,
MVN_Treatment_Site_Address_Line_2__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treatment Site Address Line 2 Formula</label>
    <type>Text</type>
</CustomField>