force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Site_City__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treatment Site City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>