force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treatment Site Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>