force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Site_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treatment Site Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>