force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Site_Postal_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site_Postal_Code_Formula__c</fullName>
    <description>Returns Treatment Site Postal Code if Treatment Site Type is NOT Home</description>
    <formula>IF (
MVN_Treatment_Site_Type_Formula__c == &apos;Home&apos;,
null,
MVN_Treatment_Site_Postal_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treatment Site Postal Code Formula</label>
    <type>Text</type>
</CustomField>