force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Site_State__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site_State__c</fullName>
    <label>Treatment Site State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_State</valueSetName>
    </valueSet>
</CustomField>