force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Treatment_Site_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treatment_Site_Type_Formula__c</fullName>
    <formula>IF(
NOT(ISBLANK(TEXT(MVN_Confirmed_Treatment_Setting__c))),
TEXT(MVN_Confirmed_Treatment_Setting__c),
null)
&amp; 
IF(
NOT(ISBLANK(TEXT(MVN_Confirmed_Clinical_Setting__c))),
&quot; - &quot;  &amp; TEXT(MVN_Confirmed_Clinical_Setting__c),
null)</formula>
    <label>Treatment Site Type Formula</label>
    <type>Text</type>
</CustomField>