force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Access_Type__c</fullName>
    <description>The patient&apos;s method of obtaining funding and access to therapy during the duration of the Event.</description>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Coverage_Types</valueSetName>
    </valueSet>
</CustomField>