force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Caregiver_Present__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caregiver_Present__c</fullName>
    <description>CAREGIVER_PRESENT, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caregiver Present</label>
    <length>100</length>
    <type>Text</type>
</CustomField>