force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Case__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case that triggered the Event.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>