force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Coverage_Investigation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Coverage_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Coverage Investigation where the Therapy Access event is related to.</description>
    <label>Coverage Investigation</label>
    <referenceTo>PJN_Coverage_Investigation__c</referenceTo>
    <relationshipLabel>Therapy Access</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>