force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Date_of_Rx_Receipt__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_of_Rx_Receipt__c</fullName>
    <description>DATE_OF_RX_RECEIPT, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Rx Receipt</label>
    <type>Date</type>
</CustomField>