force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Date_Sent_to_Veeva_CRM__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Sent_to_Veeva_CRM__c</fullName>
    <description>Date and time the Event was sent to Veeva CRM.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date and time the Event was sent to Veeva CRM.</inlineHelpText>
    <label>Date Sent to Veeva CRM</label>
    <type>DateTime</type>
</CustomField>