force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Date_Start_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Start_Form_Received__c</fullName>
    <description>DATE_START_FORM_RECEIVED, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Start Form Received</label>
    <type>Date</type>
</CustomField>