force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Details__c.field-meta.xml
<CustomField>
    <fullName>PJN_Details__c</fullName>
    <description>Summarized details of the Event, formatted dependent on record type.</description>
    <formula>IF(
RecordType.DeveloperName == &quot;PJN_Therapy_Status_Update&quot;,
IF(ISBLANK(TEXT(PJN_New_Therapy_Status__c)) &amp;&amp; ISBLANK(TEXT(PJN_New_Therapy_Sub_Status__c)), &quot;[none]&quot;, PJN_New_Therapy_Status_Formula__c),
IF(
RecordType.DeveloperName == &quot;PJN_Physician_Change&quot;,
IF(ISBLANK(PJN_Previous_Physician__c), &quot;[none]&quot;, PJN_Previous_Physician_Formula__c) &amp; &quot; --&gt; &quot; &amp; IF(ISBLANK(PJN_New_Physician__c), &quot;[none]&quot;, PJN_New_Physician_Formula__c),
NULL
)
)</formula>
    <label>Details</label>
    <type>Text</type>
</CustomField>