force-app/main/default/src/objects/PJN_Event__c/fields/PJN_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_End_Date__c</fullName>
    <description>End date of the Event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>