force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Event_Automation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Event_Automation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Event Automation record that controls the resulting actions from this Event update. Can be set automatically for automated Event updates or manually for manual Event updates.</description>
    <label>Event Automation</label>
    <referenceTo>PJN_Event_Automation__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>