force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Event_Automation_Key__c.field-meta.xml
<CustomField>
    <fullName>PJN_Event_Automation_Key__c</fullName>
    <description>Key to match an event automation record.</description>
    <formula>PJN_Fulfillment_Request__r.PJN_Care_Plan__r.PJN_Program_DeveloperName__c 
+ &apos;-&apos; 
+  PJN_Status__c 
+  PJN_Sub_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Automation Key</label>
    <type>Text</type>
</CustomField>