force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Event_Type__c</fullName>
    <description>Returns the name of the event record type.</description>
    <formula>RecordType.Name</formula>
    <label>Event Type</label>
    <type>Text</type>
</CustomField>