force-app/main/default/src/objects/PJN_Event__c/fields/PJN_File_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_File_Date__c</fullName>
    <description>FILEDATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Date</label>
    <type>Date</type>
</CustomField>