force-app/main/default/src/objects/PJN_Event__c/fields/PJN_File_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_File_Name__c</fullName>
    <description>FILENAME, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>