force-app/main/default/src/objects/PJN_Event__c/fields/PJN_First_Dose_Administered__c.field-meta.xml
<CustomField>
    <fullName>PJN_First_Dose_Administered__c</fullName>
    <description>FIRST_DOSE_ADMINISTERED, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Dose Administered</label>
    <length>100</length>
    <type>Text</type>
</CustomField>