force-app/main/default/src/objects/PJN_Event__c/fields/PJN_First_Dose_Administered_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_First_Dose_Administered_Date__c</fullName>
    <description>FIRST_ADMINISTRATION_DATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Dose Administered Date</label>
    <type>Date</type>
</CustomField>