force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Fulfillment_Request__c.field-meta.xml
<CustomField>
    <fullName>PJN_Fulfillment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fulfillment Request that triggered Event.</description>
    <label>Fulfillment Request</label>
    <referenceTo>PJN_Fulfillment_Request__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>