force-app/main/default/src/objects/PJN_Event__c/fields/PJN_HIPPA_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_HIPPA_Consent_Date__c</fullName>
    <description>HIPAA_CONSENT_DATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HIPPA Consent Date</label>
    <type>Date</type>
</CustomField>