force-app/main/default/src/objects/PJN_Event__c/fields/PJN_HIPPA_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_HIPPA_Consent_Status__c</fullName>
    <description>HIPAA_CONSENT_STATUS, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HIPPA Consent Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>