force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Location_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>PJN_Location_Address_Line_2__c</fullName>
    <description>LOCATION_ADDRESS_LINE_2, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>