force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Location_City__c.field-meta.xml
<CustomField>
    <fullName>PJN_Location_City__c</fullName>
    <description>LOCATION_CITY, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>