force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Location_State__c.field-meta.xml
<CustomField>
    <fullName>PJN_Location_State__c</fullName>
    <description>LOCATION_STATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>