force-app/main/default/src/objects/PJN_Event__c/fields/PJN_NDC__c.field-meta.xml
<CustomField>
    <fullName>PJN_NDC__c</fullName>
    <description>NDC, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NDC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>