force-app/main/default/src/objects/PJN_Event__c/fields/PJN_New_Physician__c.field-meta.xml
<CustomField>
    <fullName>PJN_New_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New physician account related to a care plan.</description>
    <label>New Physician</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Physician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events (New Physician)</relationshipLabel>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>