force-app/main/default/src/objects/PJN_Event__c/fields/PJN_New_Physician_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_New_Physician_Formula__c</fullName>
    <description>Returns the first name and last name of the new physician to be displayed in the patient&apos;s timeline.</description>
    <formula>PJN_New_Physician__r.FirstName &amp;&quot; &quot;&amp; PJN_New_Physician__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Physician</label>
    <type>Text</type>
</CustomField>