force-app/main/default/src/objects/PJN_Event__c/fields/PJN_New_Therapy_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_New_Therapy_Status_Formula__c</fullName>
    <description>Concatenation of new therapy status and new therapy sub status.</description>
    <formula>TEXT(PJN_New_Therapy_Status__c) 
&amp; 
IF(
NOT(ISBLANK(TEXT(PJN_New_Therapy_Sub_Status__c))),
&quot; - &quot;,
NULL
)
&amp;
TEXT(PJN_New_Therapy_Sub_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Therapy Status</label>
    <type>Text</type>
</CustomField>