force-app/main/default/src/objects/PJN_Event__c/fields/PJN_New_Therapy_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_New_Therapy_Sub_Status__c</fullName>
    <description>Updated Therapy Sub-Status of the patient, as reported by a user.</description>
    <label>New Therapy Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PJN_New_Therapy_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PJN_Sub_Status</valueSetName>
    </valueSet>
</CustomField>