force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Next_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Next_Training_Date__c</fullName>
    <description>NEXT_TRAINING_DATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Training Date</label>
    <type>Date</type>
</CustomField>