force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Next_Training_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>PJN_Next_Training_Requested_By__c</fullName>
    <description>NEXT_TRAINING_REQUESTED_BY, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Training Requested By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>