force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Order_Transaction_Notes__c.field-meta.xml
<CustomField>
    <fullName>PJN_Order_Transaction_Notes__c</fullName>
    <description>ORDER_TRANSACTION_NOTES, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Transaction Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>