force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Patient_Concerns__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Concerns__c</fullName>
    <description>PATIENT_CONCERNS, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Concerns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>