force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Patient_Consented__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Consented__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Patient Consented status of the record&apos;s parent Care Plan.</description>
    <label>Patient Consented</label>
    <type>Checkbox</type>
</CustomField>