force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Patient_DOB__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_DOB__c</fullName>
    <description>PATIENT_DOB, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient DOB</label>
    <type>Date</type>
</CustomField>