force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Patient_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Email_Address__c</fullName>
    <description>PATIENT_EMAIL_ADDRESS, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Email Address</label>
    <type>Email</type>
</CustomField>