force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_First_Name__c</fullName>
    <description>PATIENT_FIRST_NAME, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>