force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Gender__c</fullName>
    <description>PATIENT_GENDER, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Gender</label>
    <length>20</length>
    <type>Text</type>
</CustomField>