force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Patient_Program_Consent__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Program_Consent__c</fullName>
    <description>PATIENT_SERVICES_OPT_IN, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Program Consent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>