force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Patient_Program_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Program_Consent_Date__c</fullName>
    <description>PATIENT_SERVICES_OPT_IN_DATE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Program Consent Date</label>
    <type>Date</type>
</CustomField>