force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Patient_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Zip_Code__c</fullName>
    <description>PATIENT_ZIP_CODE, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>