force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Pharmacy_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_Pharmacy_ID__c</fullName>
    <description>PHARMACY_ID, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>