force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Pharmacy_NPI__c.field-meta.xml
<CustomField>
    <fullName>PJN_Pharmacy_NPI__c</fullName>
    <description>PHARMACY_NPI, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy NPI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>