force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Physician_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Address_Line_1__c</fullName>
    <description>Text field used to store a physician&apos;s address line 1 for use in inbound data mapping and integrations.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>