force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Physician_DEA__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_DEA__c</fullName>
    <description>PHYSICIAN_DEA, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician DEA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>