force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Physician_Fax__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Fax__c</fullName>
    <description>PHYSICIAN_FAX_NUMBER, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Fax</label>
    <type>Phone</type>
</CustomField>