force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Physician_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_First_Name__c</fullName>
    <description>PHYSICIAN_FIRST_NAME, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>