force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Physician_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Network_Id__c</fullName>
    <description>Physician Id for the Care Plan associated to this Event.</description>
    <formula>PJN_Case__r.PJN_Physician_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician</label>
    <type>Text</type>
</CustomField>