force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Physician_Phone__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Phone__c</fullName>
    <description>PHYSICIAN_PHONE_NUMBER, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Phone</label>
    <type>Phone</type>
</CustomField>