force-app/main/default/src/objects/PJN_Event__c/fields/PJN_Physician_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Physician_Zip_Code__c</fullName>
    <description>PHYSICIAN_ZIP_CODE,used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Zip Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>