force-app/main/default/src/objects/PJN_Event__c/fields/PJN_PQC_Reported__c.field-meta.xml
<CustomField>
    <fullName>PJN_PQC_Reported__c</fullName>
    <description>PQC_REPORTED, used for inbound data mapping.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PQC Reported</label>
    <length>10</length>
    <type>Text</type>
</CustomField>